--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "version": "2.0",
   "description": "Learn new skills and share the latest resources.",
-  "icons": { "16" : "images/icon.png",
+  "icons": { "16" : "images/brain-icon.png",
  			"48" : "images/48.png",
 			"128" : "images/128.png"},
   "homepage_url": "http://lifehacker.com/",
@@ -12,7 +12,7 @@
 	  "http://feeds.gawker.com/*"
 	],
   "browser_action": {
-    "default_icon": "images/icon.png", 
+    "default_icon": "images/brain-icon.png", 
     "default_title": "Lifehacker Notifier",      
     "default_popup": "popup.html"       
   }
